[tool.poetry]
name = "buzzapi"
version = "0.1.1"
description = ""
authors = ["Zach Grammon <zachgrammon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/zacgra/buzzapi"
"Bug Tracker" = "https://github.com/zacgra/buzzapi/issues"
